// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category should match snapshot - data 1`] = `
<div>
  <div
    class="MuiContainer-root sc-eCssSg cnnlHQ MuiContainer-maxWidthLg"
  >
    <img
      alt="abc"
      class="sc-hKgILt gikrGG"
      src="https://wut-vtrips.herokuapp.com/link"
    />
    <h3
      class="MuiTypography-root MuiTypography-h3"
    >
      abc
    </h3>
  </div>
</div>
`;

exports[`Category should match snapshot - isError 1`] = `
<div>
  <div
    class="MuiContainer-root sc-eCssSg cnnlHQ MuiContainer-maxWidthLg"
  >
    <div>
       Nie udało się pobrać postu 
    </div>
  </div>
</div>
`;

exports[`Category should match snapshot - isLoading 1`] = `
<div>
  <div
    class="MuiContainer-root sc-eCssSg cnnlHQ MuiContainer-maxWidthLg"
  >
    <span
      class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-pulse"
      style="width: 210px; height: 118px;"
    />
    <h3
      class="MuiTypography-root MuiTypography-h3"
    />
    <span
      class="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-pulse"
      style="width: 40px; height: 40px;"
    />
  </div>
</div>
`;
